--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,10 @@
     "python.analysis.extraPaths": [
         "${workspaceFolder}/extensions/pegasus.simulator",
         "${workspaceFolder}/app/kit/extscore/omni.kit.pip_archive/pip_prebundle",
+        "${workspaceFolder}/app/kit/exts/omni.kit.pip_archive/pip_prebundle",
         "${workspaceFolder}/app/kit/kernel/py",
         "${workspaceFolder}/app/kit/plugins/bindings-python",
+        "${workspaceFolder}/app/kit/python/lib/python3.10/site-packages",
         "${workspaceFolder}/app/extscache/omni.kit.quicksearch.select-0.8.3",
         "${workspaceFolder}/app/extscache/omni.kit.browser.asset_provider.sketchfab-1.0.9",
         "${workspaceFolder}/app/extscache/omni.scene.optimizer.core-104.1.5+104.1.lx64.r.cp37",
@@ -204,6 +206,7 @@
         "${workspaceFolder}/app/extscache/omni.kit.mesh.raycast-104.3.1+104.1.lx64.r.cp37",
         "${workspaceFolder}/app/extscache/omni.paint.brush.select-104.3.2+104.1",
         "${workspaceFolder}/app/extscache/omni.usd.schema.destruction-0.4.0+104.1.lx64.r.cp37",
+        "${workspaceFolder}/app/exts/omni.pip.compute/pip_prebundle",
         "${workspaceFolder}/app/exts/omni.isaac.mjcf",
         "${workspaceFolder}/app/exts/omni.isaac.tests",
         "${workspaceFolder}/app/exts/omni.drivesim.sensors.nv.radar",
